test: setting PaymentService unit test coverage to 94%